<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project Details -->
    <groupId>com.cars24</groupId>
    <artifactId>csms</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>csms</name>
    <description>A sample Java project</description>

    <!-- Properties -->
    <properties>
        <maven.compiler.source>21</maven.compiler.source> <!-- Update based on your Java version -->
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <!-- Dependencies -->
        <dependencies>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.33</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>